--- a/widget/index.html
+++ b/widget/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
 	<p>Hello!</p>
+	<p>Welcome to the apicloudtest!</p>
+	<p>You can go and watch something interesting.</p>
+	<a href="html/css_icon.html">css_icon</a>
 </body>
 </html>
