--- a/widget/index.html
+++ b/widget/index.html
@@ -15,6 +15,6 @@
 	<p>Hello!</p>
 	<p>Welcome to the apicloudtest!</p>
 	<p>You can go and watch something interesting.</p>
-	<a href="html/css_icon.html">css_icon</a>
+	<a href="html/css_icon.html">css_icon</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/show_script.html">show_script</a>
 </body>
 </html>
