--- a/widget/index.html
+++ b/widget/index.html
@@ -10,11 +10,15 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="format-detection" content="email=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0"/>
+    <link rel="stylesheet" type="text/css" href="../css/comm.css">
 </head>
 <body>
-	<p>Hello!</p>
-	<p>Welcome to the apicloudtest!</p>
-	<p>You can go and watch something interesting.</p>
-	<a href="html/css_icon.html">css_icon</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/show_script.html">show_script</a>
+    <header>home</header>
+    <section>
+    	<p>Hello!</p>
+    	<p>Welcome to the apicloudtest!</p>
+    	<p>You can go and watch something interesting.</p>
+    	<a href="html/css_icon.html">css_icon</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="html/show_script.html">show_script</a>
+    </section>
 </body>
 </html>
