--- a/widget/index.html
+++ b/widget/index.html
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="format-detection" content="email=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0"/>
-    <link rel="stylesheet" type="text/css" href="../css/comm.css">
+    <link rel="stylesheet" type="text/css" href="css/comm.css">
 </head>
 <body>
     <header>home</header>
