--- a/widget/index.html
+++ b/widget/index.html
@@ -7,14 +7,14 @@
 	<meta http-equiv="Cache-Control" content="no-cache,no-store,must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-	<script type="text/javascript" src="zepto_v1.2.js"></script>
-	<script type="text/javascript" src="zepto_deferred.js"></script>
-	<script type="text/javascript" src="zepto_callbacks.js"></script>
-	<script type="text/javascript" src="sha1.js"></script>
-	<script type="text/javascript" src="wechatApi.js"></script>
-	<script type="text/javascript" src="Vue.js"></script>
+	<script type="text/javascript" src="js/zepto_v1.2.js"></script>
+	<script type="text/javascript" src="js/zepto_deferred.js"></script>
+	<script type="text/javascript" src="js/zepto_callbacks.js"></script>
+	<script type="text/javascript" src="js/sha1.js"></script>
+	<script type="text/javascript" src="js/wechatApi.js"></script>
+	<script type="text/javascript" src="js/Vue.js"></script>
 </head>
 <body>
 
